--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,8 +6,8 @@
 }
 
 :root {
-  --primary-color: #4caf50;
-  --primary-dark: #388e3c;
+  --primary-color: #015b1f;
+  --primary-dark: #013211;
   --text-color: #333333;
   --text-muted: #6c757d;
   --accent-color: #f5f7ff;
